3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

types/shop_inventory/shop_inventory.c: fix documentation.
Nicolas Weeger 2007-06-03

Fix multipart altars not working correctly.
 types/altar/altar.c
 types/trigger_altar/trigger_altar.c
 types/trigger_pedestal/trigger_pedestal.c
Nicolas Weeger 2007-06-03

Apply patch #1638868: Ident skills cover larger area with exp courtesy Aaron Baugher.
 server/skills.c
Nicolas Weeger 2007-06-03

server/apply.c: wrong return value when handled by a plugin.
Nicolas Weeger 2007-06-03

Fix lamp-related issues.
 common/map.c: don't clear FLAG_APPLY for lamps, as it indicates on/off.
 server/apply.c: lamps don't change apply status when being 'unapplied'.
 types/lamp/lamp.c: lamps can only be (un)applied when in inventory. 
Nicolas Weeger 2007-06-02

common/object.c: simplify insert_ob_in_ob when merging. Correctly update the light.
Nicolas Weeger 2007-06-02

Move ob_apply logic for LAMP objects to the ob_method system.
 include/typesproto.h
 server/apply.c ob_types.c
 types/lamp/lamp.c
 types/legacy/apply.c
 types/ChangeLog Makefile.am
Nicolas Weeger 2007-06-02

Move ob_apply logic for ARMOUR_IMPROVER objects to the ob_method system.
 include/sproto.h typesproto.h
 server/apply.c ob_types.c
 types/armour_improver
 types/armour_improver/armour_improver.c
 types/legacy/apply.c
 types/Changelog Makefile.am
Nicolas Weeger 2007-06-02

Rename MENU to SHOP_INVENTORY, better match.
Move ob_apply logic for SHOP_INVENTORY objects to the ob_method system.
 common/item.c
 include/define.h typesproto.h
 plugins/cfpython/cfpython.c
 server/shop.c ob_types.c
 types/legacy/apply.c
 types/shop_inventory/shop_inventory.c
 types/ChangeLog
 types/Makefile.am